Proper page is displayed now, minor restructure and more.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,11 @@
 /* Apply external CSS modifications not handled by Tailwind. */
+
+section div  {
+  padding: 1px;
+}
+
+html, body {
+  height: 100%;
+  overflow: hidden;
+  scroll-behavior: smooth;
+}
